src/objects/bizible__Text_Ad__c.object
<CustomObject>
    <fields>
        <fullName>bizible__Ad_Description_1__c</fullName>
        <label>Ad Description #1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Ad_Description_2__c</fullName>
        <label>Ad Description #2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Ad_Destination_URL__c</fullName>
        <label>Ad Destination URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bizible__Ad_Display_URL__c</fullName>
        <label>Ad Display URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bizible__ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Bizible Ad Content</label>
    <listViews>
        <fullName>bizible__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ad Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bizible Ad Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>